# copilot-usage-service

./: .env.template  README.md  docker-compose.yaml  pyproject.toml
app/: datatypes.py  main.py  settings.py
container/development/: Dockerfile
docs/: development-plan.md  openapi.yaml
tests/: conftest.py  test_get_usage.py  test_vowel_rule.py  test_word_counter.py
tests/assets/: current_period_mock.json
