[project]
name = "copilot-usage-service"
version = "0.1.0"
description = "A FastAPI API with a `/usage` endpoint for providing copilot usage data"
authors = [
    {name = "Scott Blackwood"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "poetry-plugin-dotenv (>=2.8.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.development.dependencies]
ruff = "^0.9.10"

[tool.poetry]
package-mode = false
